# bug_report_trunk_bin_panic

./: Cargo.toml  README.md  Trunk.toml  index.html
src/: component.rs  main.rs
